--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,7 +28,7 @@ logging.level.root=INFO
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=jefferson.sanjuan@est.iudigital.edu.co
-spring.mail.password=Diosesamor.2021
+spring.mail.password=123456
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
